Atualizada a sessão de comidas com descrições e preços.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="style.css">
 
   </head>
-
+  
   <body>
 
     <header>
-      <h1>Rocket<span>Coffee</span></h1>
+      <h1>First <span>Coffee</span></h1>
       <p>Aberto todos os dias. 8h-21h</p>
     </header>
 
@@ -26,27 +26,27 @@
       <ul>
         <li>
           <div class="details">
-            <h3>Waffle Doce</h3>
+            <h3>Croissant Clássico</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Receita tradicional feita com farinha, açúcar, sal, leite, fermento, manteiga e ovo.  
             </p>
           </div>
 
           <strong class="price">
-            R$37.70
+            R$13,00
           </strong>
         </li>
 
         <li>
           <div class="details">
-            <h3>Maçã Doce</h3>
+            <h3>Misto Quente</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Pão francês, presunto defumado e queijo coalho. 
             </p>
           </div>
 
           <strong class="price">
-            R$17.70
+            R$7,00
           </strong>
         </li>
 
@@ -59,61 +59,65 @@
       <ul>
         <li>
           <div class="details">
-            <h3>Vinho</h3>
+            <h3>Capuccino</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Clássico italiano feito com café expresso e leite.  
             </p>
           </div>
 
           <strong class="price">
-            R$37.70
+            R$8,50
           </strong>
         </li>
 
         <li>
           <div class="details">
-            <h3>Água com gás</h3>
+            <h3>Café Expresso</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Café moído sob alta pressão em água fervente. 
             </p>
           </div>
 
           <strong class="price">
-            R$17.70
+            R$6,50
           </strong>
         </li>
 
       </ul>
     </section>
+
     <section>
         <h2>Comidas</h2>
   
         <ul>
           <li>
             <div class="details">
-              <h3>Caponata</h3>
+              <h3>Torta de Caponata</h3>
               <p class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Massa folheada com recheio de beringelas, abobrinha italiana, azeitonas, pimentões coloridos, cebola e folhas de manjericão.
               </p>
             </div>
   
             <strong class="price">
-              R$37.70
-            </strong>
-          </li>  
-          <li>
-            <div class="details">
-              <h3>Arroz de camarão</h3>
-              <p class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              </p>
-            </div>
-  
-            <strong class="price">
-              R$17.70
+              R$21,50
             </strong>
           </li>
+  
+          <li>
+            <div class="details">
+              <h3>Arroz de Camarão</h3>
+              <p class="description">
+                  Arroz feito com caldo de camarão, leite de coco, pimenta de cheiro, cebola, tomates e pimentões misturado com camarão gratinado ao alho e óleo.
+              </p>
+            </div>
+  
+            <strong class="price">
+              R$28,50
+            </strong>
+          </li>
+  
         </ul>
-      </section>      
+      </section>
+
   </body>
 </html>
